# CSE100EncodingProject

./: README  metadata.yml
src/: CMakeLists.txt  FileUtils.hpp  bitconverter.cpp  compress.cpp  uncompress.cpp
src/bitStream/input/: BitInputStream.cpp  BitInputStream.hpp  CMakeLists.txt
src/bitStream/output/: BitOutputStream.cpp  BitOutputStream.hpp  CMakeLists.txt
src/encoder/: CMakeLists.txt  HCNode.hpp  HCTree.cpp  HCTree.hpp
test/: CMakeLists.txt  test_BitInputStream.cpp  test_BitOutputStream.cpp  test_HCTree.cpp
